# periodic-lbm

./: CMakeLists.txt  README.md  fvm_bardow.f90
app/: CMakeLists.txt  main_taylor_green.f90  main_vortex.f90
graphs/: bardow2006_fig2.txt  fvm_bardow_64.txt  fvm_dugks_64.txt  graph1.plt  natrium_fig5.gp  natrium_fig5.txt  zhu2017.txt
sim/: CMakeLists.txt  README.md  analysis.py  cases.py  fvm_main.F90  kinds.f90  lbm.h  liblwcuf.F90  nvbuild.sh  print_progress.c  sim.F90  sim_dugks.f90  sim_fvm.F90  sim_lw.F90  sim_lw4.F90  sim_lw4cuf.F90  sim_lw6.F90  sim_slbm.F90  standard_lbm.F90  taylor_green.f90  test_xy_der.F90  test_xy_der_wrong.f90
src/: CMakeLists.txt  README.md  c_spmv_kokkos.cc  collision_bgk.F90  collision_bgk_improved.f90  collision_regularized.F90  collision_trt.F90  collision_trt.f90  fvm_bardow.F90  interp.f90  main.f90  periodic_dugks.F90  periodic_lbm.f90  precision.F90  precision.f90  sparse_streaming.f90  vorticity.f90  vtk.f90
src/benchmarks/: barotropic_vortex_case.F90  shear_layer.f90  taylor_green.f90
src/output/: README.md  gnuplot.F90  npy.f90  output_vtk_polydata.cc  vtk.F90  vtk.f90  vtk_polydata.cc
tools/: geom_primitives.py  gridgen.py  point_cloud_gen.py  vpp.py
